# TuFT

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  conftest.py  index.html  pyproject.toml
.github/workflows/: checks.yml  deploy-e2e.yml  docker.yml  install-script.yml  publish.yml  sphinx-doc.yml  unittest.yml
config/: tuft_config.example.yaml
deploy/lambda/: ci_sshkey.py  launch.py
deploy/modal/: launch.py  tuft_config.example.yaml
docker/: Dockerfile
docs/: console.md  minimal-design.md  persistence.md  telemetry.md  unittest.md
docs/sphinx_doc/: Makefile  build_docs.sh  switcher.json
en/latest/: .buildinfo  genindex.html  index.html  objects.inv  roadmap.html  search.html  searchindex.js
examples/chat_sft/: chat_sft.ipynb  dataset.py  train.py
examples/countdown_rl/: countdown_rl.ipynb  train.py
examples/on_policy_distillation/: README.md  config.yaml  dataset.py  sample_outputs.md  train.py
examples/personality_sft/: README.md  config.yaml  dataset.py  train.py
scripts/: install.sh  install_flash_attn.py  verify_runtime_versions.py  verl-git-override.txt
src/tuft/: __init__.py  backend.py  checkpoints.py  cli.py  config.py  exceptions.py  (+6 more)
tests/: helpers.py  test_cli.py  test_data_parallel.py  test_fsdp_training_backend.py  test_futures.py  test_integration.py  test_integration_persistence.py  test_lora_before_after.py  test_loss_fn.py  test_openai_api.py  test_persistence.py  test_sampling_backend.py  test_sequence_executor.py  test_server.py  test_state_controllers.py  test_telemetry.py  test_training_backend.py
(+164 files in other folders)
