[project]
name = "tuft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "numpy<2.0.0",
    "tinker>=0.7.0",
    "typer>=0.20.1",
    "uvicorn[standard]>=0.38.0",
    "omegaconf>=2.3.0",
    "ray>=2.50.0",
    "transformers>=4.57.3",
    "peft>=0.18.0",
]

[project.scripts]
"tuft" = "tuft.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "tinker",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
per-file-ignores = {"src/tuft/server.py" = ["B008"]}

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportUnusedImport = false
reportMissingImports = false
exclude = [
    "**/.venv",
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "tinker",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
